--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -65,6 +65,9 @@
     <Image Include="resources\textures\player_anim2.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="resources\textures\moomin.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ECS\AABBComponent.h">
