--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -295,6 +295,9 @@
     <ClInclude Include="src\engine\renderer\FontManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\engine\event\Event.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
